SigmaCodebackup3rdSep/objects/Manufacturing_Run_Allocation_Line_Items__c.object
<CustomObject>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inventory_Location_Product_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location Product Line Item</label>
        <referenceTo>Inventory_Location_Product_Line_Item__c</referenceTo>
        <relationshipLabel>Manufacturing Run Allocation Line Items</relationshipLabel>
        <relationshipName>Manufacturing_Run_Allocation_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inventory_Location_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory Location Product</label>
        <referenceTo>Inventory_Location_Product__c</referenceTo>
        <relationshipLabel>Manufacturing Run Allocation Line Items</relationshipLabel>
        <relationshipName>Manufacturing_Run_Allocation_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Manufacturing Run Allocation Line Items</relationshipLabel>
        <relationshipName>Manufacturing_Run_Allocation_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lot__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lot</label>
        <referenceTo>Lot__c</referenceTo>
        <relationshipLabel>Manufacturing Run Allocation Line Items</relationshipLabel>
        <relationshipName>Manufacturing_Run_Allocation_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manufacturing_Run_Allocation__c</fullName>
        <label>Manufacturing Run Allocation</label>
        <referenceTo>Manufacturing_Run_Allocation__c</referenceTo>
        <relationshipLabel>Manufacturing Run Allocation Line Items</relationshipLabel>
        <relationshipName>Manufacturing_Run_Allocation_Line_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Quantity</label>
        <precision>12</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Manufacturing Run Allocation Line Item</label>
    <nameField>
        <displayFormat>MRALI-{0000}</displayFormat>
        <label>Manufacturing Run Allocation Line Items</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Manufacturing Run Allocation Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>